attempted to fix nav text on mobile

--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -63,6 +63,9 @@
     .offcanvas .bottom-text{
         text-align:center;
         padding-bottom: 5px;
+        text-wrap:wrap;
+        word-break: break-all;
+        overflow-wrap:break-word;
     }
 
     .bottom-nav .nav-link{
